--- a/index.html
+++ b/index.html
@@ -1790,9 +1790,8 @@
 };
 </script>
 
-<!-- Google Maps com Marker Clustering -->
+<!-- Google Maps -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApaDb9rSw2sNTaY7fjBqmrgjWYD9xwjcU&loading=async&callback=initMap&v=beta&libraries=places,geometry,marker"></script>
-<script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
 
 <script>
 let map;
@@ -1805,7 +1804,6 @@ let deliveryMarkers = {}; // Armazena marcadores de endereços de entrega
 let directionsService = null; // Serviço de rotas do Google Maps
 let directionsRenderer = null; // Renderizador de rotas
 let routeMode = false; // Modo de planejamento de rota ativo/inativo
-let markerCluster = null; // Cluster de marcadores para melhor performance
 let lastPositionUpdate = 0; // Timestamp da última atualização de posição
 let updateThrottle = 1000; // Atualizar posição no máximo a cada 1 segundo (performance)
 
@@ -2111,22 +2109,41 @@ function handleGeoError(error, isInitial = false) {
 // MARCADORES DE ENTREGAS
 // ===========================
 
+// Função auxiliar para criar SVG de pin do Google Maps com número
+function createPinSVG(number) {
+    // SVG do pin do Google Maps (formato teardrop/gota invertida)
+    const svg = `
+        <svg width="40" height="56" viewBox="0 0 40 56" xmlns="http://www.w3.org/2000/svg">
+            <!-- Sombra -->
+            <ellipse cx="20" cy="54" rx="8" ry="2" fill="rgba(0,0,0,0.3)"/>
+
+            <!-- Pin vermelho -->
+            <path d="M20 0 C8.954 0 0 8.954 0 20 C0 35 20 56 20 56 S40 35 40 20 C40 8.954 31.046 0 20 0 Z"
+                  fill="#EA4335"
+                  stroke="#FFFFFF"
+                  stroke-width="2"/>
+
+            <!-- Círculo branco interno -->
+            <circle cx="20" cy="20" r="12" fill="#FFFFFF"/>
+
+            <!-- Número -->
+            <text x="20" y="20"
+                  text-anchor="middle"
+                  dominant-baseline="central"
+                  font-family="Arial, sans-serif"
+                  font-size="14"
+                  font-weight="bold"
+                  fill="#EA4335">${number}</text>
+        </svg>
+    `;
+
+    return 'data:image/svg+xml;charset=UTF-8,' + encodeURIComponent(svg);
+}
+
 function addDeliveryMarkers() {
     console.log('🔵 Adicionando marcadores de entrega...');
 
-    // PASSO 1: Limpar cluster anterior COMPLETAMENTE
-    if (markerCluster) {
-        console.log('🗑️ Destruindo cluster anterior...');
-        try {
-            markerCluster.clearMarkers();
-            markerCluster.setMap(null);
-        } catch (e) {
-            console.warn('Erro ao limpar cluster:', e);
-        }
-        markerCluster = null;
-    }
-
-    // PASSO 2: Remover TODOS os marcadores anteriores
+    // PASSO 1: Remover TODOS os marcadores anteriores
     const markerCount = Object.keys(deliveryMarkers).length;
     if (markerCount > 0) {
         console.log(`🗑️ Removendo ${markerCount} marcadores anteriores...`);
@@ -2143,10 +2160,10 @@ function addDeliveryMarkers() {
         });
     }
 
-    // PASSO 3: Resetar objeto completamente
+    // PASSO 2: Resetar objeto completamente
     deliveryMarkers = {};
 
-    const markers = []; // Array para clustering (ambos os tipos)
+    let markerNumber = 1; // Contador para numeração sequencial
 
     // Adicionar marcador para cada endereço no banco de dados
     Object.entries(addressDatabase).forEach(([qrCode, data]) => {
@@ -2155,37 +2172,36 @@ function addDeliveryMarkers() {
             lng: data.longitude
         };
 
-        // Criar elemento do marcador (pacote/caixa)
+        // Criar elemento do marcador com pin estilo Google Maps
         const markerDiv = document.createElement('div');
-        markerDiv.style.width = '30px';
-        markerDiv.style.height = '30px';
-        markerDiv.style.background = '#ea4335';
-        markerDiv.style.border = '2px solid white';
-        markerDiv.style.borderRadius = '4px';
-        markerDiv.style.boxShadow = '0 2px 6px rgba(0,0,0,0.4)';
-        markerDiv.style.display = 'flex';
-        markerDiv.style.alignItems = 'center';
-        markerDiv.style.justifyContent = 'center';
-        markerDiv.style.fontSize = '16px';
-        markerDiv.innerHTML = '📦';
         markerDiv.style.cursor = 'pointer';
         markerDiv.style.transition = 'transform 0.2s';
 
+        // Criar imagem do pin com número
+        const pinImg = document.createElement('img');
+        pinImg.src = createPinSVG(markerNumber);
+        pinImg.style.width = '40px';
+        pinImg.style.height = '56px';
+        pinImg.style.display = 'block';
+
+        markerDiv.appendChild(pinImg);
+
+        // Efeito hover
         markerDiv.addEventListener('mouseenter', () => {
-            markerDiv.style.transform = 'scale(1.2)';
+            markerDiv.style.transform = 'scale(1.15)';
         });
         markerDiv.addEventListener('mouseleave', () => {
             markerDiv.style.transform = 'scale(1)';
         });
 
         try {
-            // Criar marcador usando AdvancedMarkerElement (se disponível) ou Marker clássico
+            // Criar marcador usando AdvancedMarkerElement (preferencial)
             if (google.maps.marker && google.maps.marker.AdvancedMarkerElement) {
                 const marker = new google.maps.marker.AdvancedMarkerElement({
                     map,
                     position,
                     content: markerDiv,
-                    title: data.address.split('\n')[0] // Primeira linha do endereço
+                    title: `${markerNumber}. ${data.address.split('\n')[0]}`
                 });
 
                 // Adicionar listener de clique no marcador
@@ -2194,7 +2210,7 @@ function addDeliveryMarkers() {
                     map.setZoom(18);
 
                     showToast(
-                        '📦 Pacote',
+                        `📍 Parada ${markerNumber}`,
                         data.address,
                         'info',
                         5000
@@ -2202,25 +2218,16 @@ function addDeliveryMarkers() {
                 });
 
                 deliveryMarkers[qrCode] = marker;
-                markers.push(marker); // IMPORTANTE: Adiciona ao array
             } else {
-                // Fallback: usar Marker clássico com ícone personalizado
+                // Fallback: usar Marker clássico com ícone SVG
                 const marker = new google.maps.Marker({
                     map,
                     position,
-                    title: data.address.split('\n')[0],
+                    title: `${markerNumber}. ${data.address.split('\n')[0]}`,
                     icon: {
-                        path: google.maps.SymbolPath.CIRCLE,
-                        fillColor: '#ea4335',
-                        fillOpacity: 1,
-                        strokeColor: '#ffffff',
-                        strokeWeight: 2,
-                        scale: 10
-                    },
-                    label: {
-                        text: '📦',
-                        color: '#ffffff',
-                        fontSize: '14px'
+                        url: createPinSVG(markerNumber),
+                        scaledSize: new google.maps.Size(40, 56),
+                        anchor: new google.maps.Point(20, 56) // Ancorar na ponta do pin
                     }
                 });
 
@@ -2230,7 +2237,7 @@ function addDeliveryMarkers() {
                     map.setZoom(18);
 
                     showToast(
-                        '📦 Pacote',
+                        `📍 Parada ${markerNumber}`,
                         data.address,
                         'info',
                         5000
@@ -2238,33 +2245,15 @@ function addDeliveryMarkers() {
                 });
 
                 deliveryMarkers[qrCode] = marker;
-                markers.push(marker); // Adiciona ao array para clustering
             }
+
+            markerNumber++; // Incrementar número para próximo marcador
         } catch (error) {
             console.error('Erro ao criar marcador de entrega:', error);
         }
     });
 
-    // Criar cluster para Markers clássicos (AdvancedMarkers não suportam clustering nativo)
-    const classicMarkers = markers.filter(m => m.setMap);
-    const advancedMarkers = markers.filter(m => !m.setMap);
-
-    if (classicMarkers.length > 0 && window.markerClusterer) {
-        try {
-            markerCluster = new markerClusterer.MarkerClusterer({
-                map,
-                markers: classicMarkers,
-                algorithm: new markerClusterer.SuperClusterAlgorithm({ radius: 100 })
-            });
-            console.log(`✅ ${classicMarkers.length} marcadores clássicos com clustering`);
-        } catch (e) {
-            console.error('❌ Erro ao criar cluster:', e);
-        }
-    }
-
-    console.log(`✅ Total: ${Object.keys(deliveryMarkers).length} marcadores adicionados`);
-    console.log(`   - AdvancedMarkers: ${advancedMarkers.length}`);
-    console.log(`   - Classic Markers: ${classicMarkers.length}`);
+    console.log(`✅ Total: ${Object.keys(deliveryMarkers).length} marcadores com pins numerados adicionados`);
 }
 
 // ===========================
@@ -3225,19 +3214,7 @@ function clearAllRoutesAndMarkers() {
 
     console.log(`✅ ${polylinesRemoved} polylines removidas`);
 
-    // 3. Limpar cluster de marcadores COMPLETAMENTE
-    if (markerCluster) {
-        console.log('🗑️ Destruindo cluster de marcadores...');
-        try {
-            markerCluster.clearMarkers();
-            markerCluster.setMap(null);
-        } catch (e) {
-            console.warn('Erro ao destruir cluster:', e);
-        }
-        markerCluster = null;
-    }
-
-    // 4. Remover TODOS os marcadores de entrega
+    // 3. Remover TODOS os marcadores de entrega
     const markerCount = Object.keys(deliveryMarkers).length;
     if (markerCount > 0) {
         console.log(`🗑️ Removendo ${markerCount} marcadores de entrega...`);
@@ -3254,7 +3231,7 @@ function clearAllRoutesAndMarkers() {
         });
     }
 
-    // 5. RESETAR completamente o objeto de marcadores
+    // 4. RESETAR completamente o objeto de marcadores
     deliveryMarkers = {};
 
     console.log('✅ ========================================');
