--- a/index.html
+++ b/index.html
@@ -1806,6 +1806,7 @@ let directionsRenderer = null; // Renderizador de rotas
 let routeMode = false; // Modo de planejamento de rota ativo/inativo
 let lastPositionUpdate = 0; // Timestamp da última atualização de posição
 let updateThrottle = 1000; // Atualizar posição no máximo a cada 1 segundo (performance)
+let currentInfoWindow = null; // InfoWindow atualmente aberta
 
 // IMPORTANTE: Inicializar array de polylines globalmente
 if (!window.routePolylines) {
@@ -1917,6 +1918,14 @@ window.initMap = function () {
                 strokeColor: '#4285f4',
                 strokeWeight: 5,
                 strokeOpacity: 0.7
+            }
+        });
+
+        // Fechar InfoWindow ao clicar no mapa (fora dos marcadores)
+        map.addListener('click', () => {
+            if (currentInfoWindow) {
+                currentInfoWindow.close();
+                currentInfoWindow = null;
             }
         });
 
@@ -2109,29 +2118,29 @@ function handleGeoError(error, isInitial = false) {
 // MARCADORES DE ENTREGAS
 // ===========================
 
-// Função auxiliar para criar SVG de pin do Google Maps com número
+// Função auxiliar para criar SVG de pin do Google Maps com número (tamanho reduzido)
 function createPinSVG(number) {
-    // SVG do pin do Google Maps (formato teardrop/gota invertida)
+    // SVG do pin do Google Maps (formato teardrop/gota invertida) - 30% menor
     const svg = `
-        <svg width="40" height="56" viewBox="0 0 40 56" xmlns="http://www.w3.org/2000/svg">
+        <svg width="28" height="40" viewBox="0 0 28 40" xmlns="http://www.w3.org/2000/svg">
             <!-- Sombra -->
-            <ellipse cx="20" cy="54" rx="8" ry="2" fill="rgba(0,0,0,0.3)"/>
+            <ellipse cx="14" cy="38" rx="5.6" ry="1.4" fill="rgba(0,0,0,0.3)"/>
 
             <!-- Pin vermelho -->
-            <path d="M20 0 C8.954 0 0 8.954 0 20 C0 35 20 56 20 56 S40 35 40 20 C40 8.954 31.046 0 20 0 Z"
+            <path d="M14 0 C6.268 0 0 6.268 0 14 C0 24.5 14 40 14 40 S28 24.5 28 14 C28 6.268 21.732 0 14 0 Z"
                   fill="#EA4335"
                   stroke="#FFFFFF"
-                  stroke-width="2"/>
+                  stroke-width="1.5"/>
 
             <!-- Círculo branco interno -->
-            <circle cx="20" cy="20" r="12" fill="#FFFFFF"/>
+            <circle cx="14" cy="14" r="8.4" fill="#FFFFFF"/>
 
             <!-- Número -->
-            <text x="20" y="20"
+            <text x="14" y="14"
                   text-anchor="middle"
                   dominant-baseline="central"
                   font-family="Arial, sans-serif"
-                  font-size="14"
+                  font-size="10"
                   font-weight="bold"
                   fill="#EA4335">${number}</text>
         </svg>
@@ -2177,11 +2186,11 @@ function addDeliveryMarkers() {
         markerDiv.style.cursor = 'pointer';
         markerDiv.style.transition = 'transform 0.2s';
 
-        // Criar imagem do pin com número
+        // Criar imagem do pin com número (tamanho reduzido)
         const pinImg = document.createElement('img');
         pinImg.src = createPinSVG(markerNumber);
-        pinImg.style.width = '40px';
-        pinImg.style.height = '56px';
+        pinImg.style.width = '28px';
+        pinImg.style.height = '40px';
         pinImg.style.display = 'block';
 
         markerDiv.appendChild(pinImg);
@@ -2192,6 +2201,21 @@ function addDeliveryMarkers() {
         });
         markerDiv.addEventListener('mouseleave', () => {
             markerDiv.style.transform = 'scale(1)';
+        });
+
+        // Criar InfoWindow para este marcador
+        const infoWindow = new google.maps.InfoWindow({
+            content: `
+                <div style="padding: 8px; max-width: 200px;">
+                    <div style="font-weight: bold; color: #EA4335; margin-bottom: 4px;">
+                        📍 Parada ${markerNumber}
+                    </div>
+                    <div style="font-size: 13px; color: #333; line-height: 1.4;">
+                        ${data.address}
+                    </div>
+                </div>
+            `,
+            maxWidth: 250
         });
 
         try {
@@ -2206,15 +2230,17 @@ function addDeliveryMarkers() {
 
                 // Adicionar listener de clique no marcador
                 marker.addListener('click', () => {
-                    map.setCenter(position);
-                    map.setZoom(18);
+                    // Fechar InfoWindow anterior se existir
+                    if (currentInfoWindow) {
+                        currentInfoWindow.close();
+                    }
 
-                    showToast(
-                        `📍 Parada ${markerNumber}`,
-                        data.address,
-                        'info',
-                        5000
-                    );
+                    // Abrir nova InfoWindow
+                    infoWindow.open(map, marker);
+                    currentInfoWindow = infoWindow;
+
+                    // Centralizar mapa suavemente
+                    map.panTo(position);
                 });
 
                 deliveryMarkers[qrCode] = marker;
@@ -2226,22 +2252,24 @@ function addDeliveryMarkers() {
                     title: `${markerNumber}. ${data.address.split('\n')[0]}`,
                     icon: {
                         url: createPinSVG(markerNumber),
-                        scaledSize: new google.maps.Size(40, 56),
-                        anchor: new google.maps.Point(20, 56) // Ancorar na ponta do pin
+                        scaledSize: new google.maps.Size(28, 40),
+                        anchor: new google.maps.Point(14, 40) // Ancorar na ponta do pin
                     }
                 });
 
                 // Adicionar listener de clique
                 marker.addListener('click', () => {
-                    map.setCenter(position);
-                    map.setZoom(18);
+                    // Fechar InfoWindow anterior se existir
+                    if (currentInfoWindow) {
+                        currentInfoWindow.close();
+                    }
 
-                    showToast(
-                        `📍 Parada ${markerNumber}`,
-                        data.address,
-                        'info',
-                        5000
-                    );
+                    // Abrir nova InfoWindow
+                    infoWindow.open(map, marker);
+                    currentInfoWindow = infoWindow;
+
+                    // Centralizar mapa suavemente
+                    map.panTo(position);
                 });
 
                 deliveryMarkers[qrCode] = marker;
