--- a/index.html
+++ b/index.html
@@ -1114,6 +1114,15 @@
             padding: 14px;
         }
     }
+
+    /* Esconder o botão X padrão do Google Maps InfoWindow */
+    .gm-style-iw-chr {
+        display: none !important;
+    }
+
+    .gm-ui-hover-effect {
+        display: none !important;
+    }
 </style>
 </head>
 <body>
