--- a/index.html
+++ b/index.html
@@ -2127,31 +2127,43 @@ function handleGeoError(error, isInitial = false) {
 // MARCADORES DE ENTREGAS
 // ===========================
 
-// Função auxiliar para criar SVG de pin do Google Maps com número (tamanho compacto)
+// Função auxiliar para criar SVG de pin do Google Maps com número (otimizado para legibilidade)
 function createPinSVG(number) {
-    // SVG do pin do Google Maps (formato teardrop/gota invertida) - tamanho compacto
+    // SVG do pin do Google Maps (formato teardrop/gota invertida)
     const svg = `
-        <svg width="20" height="28" viewBox="0 0 20 28" xmlns="http://www.w3.org/2000/svg">
+        <svg width="24" height="32" viewBox="0 0 24 32" xmlns="http://www.w3.org/2000/svg">
             <!-- Sombra -->
-            <ellipse cx="10" cy="27" rx="4" ry="1" fill="rgba(0,0,0,0.3)"/>
+            <ellipse cx="12" cy="30.5" rx="5" ry="1.5" fill="rgba(0,0,0,0.35)"/>
 
-            <!-- Pin vermelho -->
-            <path d="M10 0 C4.477 0 0 4.477 0 10 C0 17.5 10 28 10 28 S20 17.5 20 10 C20 4.477 15.523 0 10 0 Z"
-                  fill="#EA4335"
+            <!-- Pin vermelho com gradiente sutil -->
+            <defs>
+                <linearGradient id="pinGradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                    <stop offset="0%" style="stop-color:#EA4335;stop-opacity:1" />
+                    <stop offset="100%" style="stop-color:#C5221F;stop-opacity:1" />
+                </linearGradient>
+            </defs>
+            <path d="M12 0 C5.373 0 0 5.373 0 12 C0 21 12 32 12 32 S24 21 24 12 C24 5.373 18.627 0 12 0 Z"
+                  fill="url(#pinGradient)"
                   stroke="#FFFFFF"
-                  stroke-width="1.2"/>
+                  stroke-width="1.5"/>
 
-            <!-- Círculo branco interno -->
-            <circle cx="10" cy="10" r="6" fill="#FFFFFF"/>
+            <!-- Círculo branco interno maior -->
+            <circle cx="12" cy="12" r="7.5" fill="#FFFFFF"/>
 
-            <!-- Número -->
-            <text x="10" y="10"
+            <!-- Sombra interna sutil no círculo -->
+            <circle cx="12" cy="12" r="7.5" fill="none" stroke="rgba(0,0,0,0.08)" stroke-width="0.5"/>
+
+            <!-- Número com contorno para melhor legibilidade -->
+            <text x="12" y="12.5"
                   text-anchor="middle"
                   dominant-baseline="central"
-                  font-family="Arial, sans-serif"
-                  font-size="8"
-                  font-weight="bold"
-                  fill="#EA4335">${number}</text>
+                  font-family="'Arial Black', Arial, sans-serif"
+                  font-size="10"
+                  font-weight="900"
+                  fill="#EA4335"
+                  stroke="#FFFFFF"
+                  stroke-width="0.5"
+                  paint-order="stroke">${number}</text>
         </svg>
     `;
 
@@ -2196,11 +2208,11 @@ function addDeliveryMarkers() {
         markerDiv.style.cursor = 'pointer';
         markerDiv.style.transition = 'transform 0.2s';
 
-        // Criar imagem do pin com número (tamanho compacto)
+        // Criar imagem do pin com número (otimizado para legibilidade)
         const pinImg = document.createElement('img');
         pinImg.src = createPinSVG(markerNumber);
-        pinImg.style.width = '20px';
-        pinImg.style.height = '28px';
+        pinImg.style.width = '24px';
+        pinImg.style.height = '32px';
         pinImg.style.display = 'block';
 
         markerDiv.appendChild(pinImg);
@@ -2298,8 +2310,8 @@ function addDeliveryMarkers() {
                     title: `${markerNumber}. ${data.address.split('\n')[0]}`,
                     icon: {
                         url: createPinSVG(markerNumber),
-                        scaledSize: new google.maps.Size(20, 28),
-                        anchor: new google.maps.Point(10, 28) // Ancorar na ponta do pin
+                        scaledSize: new google.maps.Size(24, 32),
+                        anchor: new google.maps.Point(12, 32) // Ancorar na ponta do pin
                     }
                 });
 
