--- a/index.html
+++ b/index.html
@@ -2385,7 +2385,7 @@ function addDeliveryMarkers() {
 
             const sequenceSpan = document.createElement('span');
             sequenceSpan.style.color = '#EA4335';
-            sequenceSpan.textContent = `#${delivery.sequence}`;
+            sequenceSpan.textContent = `Ordem: ${delivery.sequence}`;
 
             const qrSpan = document.createElement('span');
             qrSpan.textContent = `QR: ${delivery.qrCode}`;
